--- a/2-Ariketa/Ariketa8/WindowGeiketa.xaml
+++ b/2-Ariketa/Ariketa8/WindowGeiketa.xaml
@@ -1,16 +1,15 @@
-﻿<Window x:Class="Ariketa8.WindowSuma2"
+﻿<Window x:Class="Ariketa8.WindowGeiketa"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ariketa8"
         mc:Ignorable="d"
-        Title="Meses" Height="187" Width="438">
+        Title="Función SumaFechas" Height="179" Width="414">
     <Grid>
-        <Label Content="Ingrese el número de meses que se agrega a la fecha:" HorizontalAlignment="Left" Margin="20,28,0,0" VerticalAlignment="Top"/>
+        <Label Content="Ingrese una fecha de la forma dd/mm/aaaa:" HorizontalAlignment="Left" Margin="20,28,0,0" VerticalAlignment="Top"/>
         <Button Content="Aceptar" HorizontalAlignment="Left" Margin="354,31,0,0" VerticalAlignment="Top" Click="Button_Aceptar"/>
         <Button Content="Cancelar" HorizontalAlignment="Left" Margin="354,69,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
         <TextBox x:Name="fecha1" HorizontalAlignment="Left" Margin="20,117,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="383"/>
-
     </Grid>
 </Window>
