--- a/Erronka/TPV sistema/Sortu_eta_editatu_Stock.xaml
+++ b/Erronka/TPV sistema/Sortu_eta_editatu_Stock.xaml
@@ -1,23 +1,22 @@
-﻿<Window x:Class="TPV_sistema.Sortu_eta_editatu"
+﻿<Window x:Class="TPV_sistema.Sortu_eta_editatu_Stock"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TPV_sistema"
         mc:Ignorable="d"
-        Title="Sortu_eta_editatu" Height="264" Width="394">
+        Title="Sortu_eta_editatu_Stock" Height="284" Width="360">
     <Grid>
         <Label Content="Izena" HorizontalAlignment="Left" Margin="77,58,0,0" VerticalAlignment="Top" Width="38"/>
         <TextBox x:Name="Izena_TextBox" HorizontalAlignment="Left" Margin="126,62,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
 
-        <Label Content="Pazahitza" HorizontalAlignment="Left" Margin="56,98,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="Pazahitza_TextBox" HorizontalAlignment="Left" Margin="126,102,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
+        <Label Content="Kantitatea" HorizontalAlignment="Left" Margin="56,98,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="Kantitatea_TextBox" HorizontalAlignment="Left" Margin="126,102,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
+
+        <Label Content="Prezioa" HorizontalAlignment="Left" Margin="77,129,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="Prezioa_TextBox" HorizontalAlignment="Left" Margin="126,134,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         
-        <Label Content="Mota" HorizontalAlignment="Left" Margin="77,129,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="combobox" HorizontalAlignment="Left" Margin="126,129,0,0" VerticalAlignment="Top" Width="120">
-            <ComboBoxItem >Admin</ComboBoxItem>
-            <ComboBoxItem >Erabiltzaile</ComboBoxItem>
-        </ComboBox>
         <Button Content="Sortu" HorizontalAlignment="Left" Margin="142,164,0,0" VerticalAlignment="Top" Width="88" Click="Sortu_Click"/>
+        
     </Grid>
 </Window>
